@@ -1,9 +1,9 @@
 Package: RDML
 Type: Package
 Title: Importing Real-Time Thermo Cycler (qPCR) Data From RDML Format Files
-Version: 0.8
+Version: 0.8-2
 LazyData: true
-Date: 2014-10-17
+Date: 2015-04-02
 Description: Imports real-time thermo cycler (qPCR) data from Real-time PCR
     Data Markup Language (RDML) format files and transforms to the appropriate
     formats of the 'qpcR' and 'chipPCR' packages.
@@ -19,8 +19,9 @@ License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
 Imports:
     R6,
-    assertthat,
     dpcR,
+    assertthat,
+    XML,
     plyr,
     dplyr
 Collate:
