@@ -5,9 +5,9 @@ export(RDML)
 import(XML)
 import(assertthat)
 import(dplyr)
+import(uuid)
 importFrom(R6,R6Class)
 importFrom(plyr,compact)
 importFrom(plyr,ddply)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
-importFrom(uuid,UUIDgenerate)
