@@ -4,25 +4,28 @@
 #' of experiment.
 #' 
 #' @param request Output from AsTable method(\link{RDML.AsTable})
-#' @param data.type Type of fluorescence data ('adp' for qPCR or 'mdp' for
+#' @param limits \code{vector} with two values (min and max values) that limits
+#' cycles or temperature that should be getted. If this values are smaller or bigger 
+#' than min or max values at dats - NAs will be generated.
+#' @param data.type Type of fluorescence data (i.e. 'adp' for qPCR or 'mdp' for
 #'   melting)
-#' @param first.col.name
+#' @param first.col.name name of the column that contains constant data for all samples
+#' (i.e. for 'adp' it can be 'cyc' or 'tmp' as decribed at RDML v1.2 standard)
 #' @param long.table Output table is ready for ggplot (See \link{RDML.AsTable}
 #'   for example)
 #' @return \code{matrix} which contains selected fluorescence data and 
 #'   additional information fromm request if \code{long.table = TRUE}.
 #' @author Konstantin A. Blagodatskikh <k.blag@@yandex.ru>, Stefan Roediger 
 #'   <stefan.roediger@@hs-lausitz.de>, Michal Burdukiewicz 
-#'   <michalburdukiewicz@@gmail.com>
-#' @references Regular Expressions as used in R -- 
-#'   http://stat.ethz.ch/R-manual/R-devel/library/base/html/regex.html
+#'   <michalburdukiewicz@@gmail.com> 
 #' @keywords manip
 #' @docType methods
 #' @name GetFData
 #' @aliases RDML.GetFData
 #' @rdname getfdata-method
 #' @include RDML.R
-#' @examples 
+#' @examples
+#' \dontrun{
 #' ## internal dataset BioRad_qPCR_melt.rdml (in 'data' directory)
 #' ## generated by Bio-Rad CFX96. Contains qPCR and melting data.
 #' ## Import without splitting by targets/types and with
@@ -34,12 +37,14 @@
 #' library(dplyr)
 #' tab <- cfx96$AsTable()
 #' fdata <- cfx96$GetFData(filter(tab, sample.type == "unkn"),
+#'                         limit
 #'                         data.type = "mdp")
 #' ## Show names for getted fdata
-#' names(fdata)
+#' colnames(fdata)
+#' }
 RDML$set("public", "GetFData",
          function(request,
-                  limit.cycles = NULL,
+                  limits = NULL,
                   data.type = "adp",
                   first.col.name = NULL,
                   long.table = FALSE) {
@@ -55,18 +60,18 @@ RDML$set("public", "GetFData",
              run[[first.col.req["run.id"]]]$
              react[[first.col.req["react.id"]]]$
              data[[first.col.req["target"]]][[data.type]][, first.col.name]
-           if(is.null(limit.cycles))
-             limit.cycles <- c(out[1], tail(out, n = 1))
+           if(is.null(limits))
+             limits <- c(out[1], tail(out, n = 1))
           
-           from <- which(out == limit.cycles[1])
+           from <- which(out == limits[1])
            if(length(from) == 0)
-             out <- c(limit.cycles[1]:(out[1] - 1), out)
+             out <- c(limits[1]:(out[1] - 1), out)
            else
              out <- out[from:length(out)]
            
-           to <- which(out == limit.cycles[2])
+           to <- which(out == limits[2])
            if(length(to) == 0) 
-             out <- c(out, (tail(out, 1) + 1) : limit.cycles[2])
+             out <- c(out, (tail(out, 1) + 1) : limits[2])
            else
              out <- head(out, to)
              
@@ -83,22 +88,22 @@ RDML$set("public", "GetFData",
                              react[[fdata["react.id"]]]$
                              data[[fdata["target"]]][[data.type]][, "fluor"]                           
                            
-                             from <- which(cycles == limit.cycles[1])
+                             from <- which(cycles == limits[1])
                              if(length(from) == 0) {
                                data <- c(
-                                 rep(data[1], cycles[1] - limit.cycles[1]), data)
-                               cycles <- c(limit.cycles[1]:(cycles[1] - 1), cycles)
+                                 rep(data[1], cycles[1] - limits[1]), data)
+                               cycles <- c(limits[1]:(cycles[1] - 1), cycles)
                              }
                              else {
                                data <- data[from:length(data)]
                                cycles <- cycles[from:length(cycles)]
                              }
                            
-                             to <- which(cycles == limit.cycles[2])
+                             to <- which(cycles == limits[2])
                              if(length(to) == 0) 
                                data <- c(data, 
                                          rep(tail(data, 1),
-                                             limit.cycles[2] - tail(cycles, 1)))
+                                             limits[2] - tail(cycles, 1)))
                              
                              else
                                data <- head(data, to)
