@@ -1,6 +1,13 @@
 #' Sets fluorescence data vectors to \code{RDML} object
 #' 
-#' Write docs here
+#' Sets fluorescence data vectors to \code{RDML} object for specified method
+#' of experiment.
+#' 
+#' @param fdata \code{matrix} that contains at first column constant data for all fluorescence vectors(i.e. cycle numbers or temperature)
+#' and fluorescence values at other columns. Name of column is the name of constant data.
+#' Names of other column are \code{fdata.names} (links to rows at \code{description}). Name of
+#' matrix passed to param becomes type of data.
+#' @param descrition output from \code{AsTable} function that descrips fluorescence data.
 #' 
 #' @examples
 #' PATH <- path.package("RDML")
@@ -29,7 +36,7 @@
 #' @rdname setfdata-method
 #' @include RDML.R
 RDML$set("public", "SetFData",
-         function(data,
+         function(fdata,
                   description) {
            data.type <- substitute(data)
            fdata.names <- colnames(data)
