@@ -6,7 +6,7 @@
 \alias{RDML.class}
 \title{R6 class \code{RDML} -- contains methods to read and overview fluorescence
 data from RDML v1.1 and v1.2 format files}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x0000000019b4a8a0> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x00000000196018a0> 
  - attr(*, "name")= chr "RDML_generator"
 }}
 \usage{
@@ -16,14 +16,12 @@ RDML
 Main purpose of this class is to work with RDML format data (Lefever et al.
 2009) and transform it to the appropriate format of the \code{qpcR} (Ritz et
 al. 2008, Spiess et al. 2008) and \code{chipPCR} packages (see
-\link{new.RDML} for import and \link{RDML.Save} for export details).
+\link{new.RDML} for import details).
 Real-time PCR Data Markup Language (RDML) is the recommended file format
 element in the Minimum Information for Publication of Quantitative Real-Time
-PCR Experiments (MIQE) guidelines (Bustin et al. 2009). After importing all
-data contained at RDML file can be accessed (getted or setted) by
-\code{fields}. Inner structure of imported data mimics structure of RDML file
-v1.2. Also data can be represented as \code{data.frame} by method
-\code{AsTable}. Such variant of data representation allows easy samples
+PCR Experiments (MIQE) guidelines (Bustin et al. 2009). Inner structure of
+imported data mimics structure of RDML file v1.2. All data except fluorescence values
+can be represented as \code{data.frame} by method \code{AsTable}. Such variant of data representation allows easy samples
 filtering (by targets, types, etc.) and serves as request for \code{GetFData}
 method -- gets fluorescence data for specified samples.
 }
@@ -31,8 +29,7 @@ method -- gets fluorescence data for specified samples.
  Type, structure of data and description of fields can be
   viewed at RDML v1.2 file description
   \link{http://rdml.org/files.php?v=1.2}. Names of fields are first level of
-  XML tree. All setters for fields contain data validators (asserts). Thus
-  invalid data can not be setted.
+  XML tree.
 }
 
 \section{Methods}{
@@ -40,7 +37,9 @@ method -- gets fluorescence data for specified samples.
   class object (see \link{RDML.new})} \item{AsTable}{represent RDML data as
   \code{data.frame} (see \link{RDML.AsTable})}\item{GetFData}{gets
   fluorescence data (see \link{RDML.GetFData})}\item{SetFData}{sets
-  fluorescence data (see \link{RDML.SetFData})}}
+  fluorescence data (see \link{RDML.SetFData})}\item{Merge}{merges two
+  \code{RDML} to one (see \link{RDML.Merge})}
+  \item{As.Dendrogram}{represents structure of \code{RDML} j,ject as dendrogram(see \link{RDML.AsDendrogram})}}
 }
 \examples{
 ## EXAMPLE 1:
